# minos-verdict-mesh

./: README.md  pyproject.toml  sbom.json
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: detect.py  health.py
backend/tests/: test_detect_api.py
extension/: README.md  manifest.json  popup.html
extension/src/: config.js  main.js
extension/src/controllers/: fileInterceptor.js  sendInterceptor.js
extension/src/dom/: chatSelectors.js
extension/src/services/: detectorClient.js  fileAnalyzer.js
extension/src/state/: settings.js
extension/src/ui/: panel.js
extension/tests/: detectorClient.test.js
multiagent-firewall/: .env.example  README.md
multiagent-firewall/integration_tests/: .env.example
multiagent-firewall/multiagent_firewall/config/: detection.json  detection.py  file_types.py
multiagent-firewall/multiagent_firewall/detectors/: checksum_validators.py  dlp.py  ocr.py
multiagent-firewall/multiagent_firewall/nodes/: detection.py  document.py
multiagent-firewall/multiagent_firewall/utils/: validation.py
multiagent-firewall/tests/: test_detection_nodes.py  test_dlp_detectors.py  test_document.py  test_llm_ocr_node.py
proxy/: .env.example  README.md  pyproject.toml
proxy/app/: config.py  llm_request_guard.py  main.py  minos_verdict_mesh.py
proxy/app/guards/: __init__.py  backend_client.py  extractors.py  http_guard.py  websocket_guard.py
proxy/tests/: test_image_extraction.py  test_proxy.py  test_proxy_integration.py  test_websocket_guard.py
