[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the minos-verdict-mesh project"
authors = [{ name = "Hugo Garcia" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "python-dotenv",
    "multiagent-firewall[ner,file-analysis,code-analysis]",
]

[dependency-groups]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]
